2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/include/rtems/termiostypes.h: Include stdlib.h.
	Add rtems_termios_baud_t.
	Rename termios_number_to_baud into rtems_termios_number_to_baud,
	termios_baud_to_number into rtems_termios_baud_to_number,
	termios_baud_to_index into rtems_termios_baud_to_index.

2009-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/lib/tftpDriver.c: Remove vim: meta-tags.

2009-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* score/src/heapwalk.c(Heap_Walk_printer): Add missing return type.
	* libnetworking/lib/tftpDriver.c (rtems_tftp_eval_path):
	Add missing parameter pathlen.
	* libmisc/shell/hexdump-conv.c: Use %lc instead of %C.

2009-09-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/src/regiondelete.c, rtems/src/regiongetfreeinfo.c,
	rtems/src/regiongetinfo.c, rtems/src/regiongetsegment.c,
	rtems/src/regiongetsegmentsize.c, rtems/src/regionresizesegment.c,
	rtems/src/regionreturnsegment.c: Remove warnings.

2009-09-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/objectidtoname.c: Remove error which cannot be reached
	since API that calls this checks the error first.
	* score/src/objectsetname.c: Adjust handling of length.

2009-09-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/src/regiondelete.c, rtems/src/regiongetfreeinfo.c,
	rtems/src/regiongetinfo.c, rtems/src/regiongetsegment.c,
	rtems/src/regiongetsegmentsize.c, rtems/src/regionresizesegment.c,
	rtems/src/regionreturnsegment.c: Do not initialize return status to
	RTEMS_INTERNAL_ERROR.

2009-09-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/rtems/pci.h: Revert extern inline patch.

2009-09-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/capture/capture.c, posix/src/pthread.c, rtems/src/tasks.c,
	score/include/rtems/score/userext.h: Eliminate use of deprecated
	rtems_extension. Re-add prototype for _User_extensions_Add_API_set.

2009-09-26	Joel Sherrill <joel.sherrill@oarcorp.com>
